<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hartwig.serve</groupId>
    <artifactId>serve</artifactId>
    <packaging>pom</packaging>
    <version>local-SNAPSHOT</version>
    <name>HMF SERVE</name>

    <modules>
        <module>common</module>
        <module>datamodel</module>
        <module>ckb-importer</module>
        <module>vicc-importer</module>
        <module>algo</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <maven.compiler.release>21</maven.compiler.release>

        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>
        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
        <maven.exec.plugin.version>3.5.0</maven.exec.plugin.version>

        <google.artifactregistry.version>2.1.0</google.artifactregistry.version>
        
        <commons.cli.version>1.3.1</commons.cli.version>
        <immutables.version>2.5.5</immutables.version>
        <htsjdk.version>2.23.0</htsjdk.version>
        <intellij.annotations.version>12.0</intellij.annotations.version>
        <google.guava.version>31.0.1-jre</google.guava.version>
        <google.gson.version>2.8.9</google.gson.version>
        <apache.log4j.version>2.17.1</apache.log4j.version>
        <jooq.version>3.15.5</jooq.version>
        <mysqlconnector.version>8.0.16</mysqlconnector.version>
        <jackson.version>2.21.2</jackson.version>
        <mysql.socket.factory.version>1.20.1</mysql.socket.factory.version>

        <junit.version>4.13.1</junit.version>

    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>artifact-registry</id>
            <url>artifactregistry://europe-west4-maven.pkg.dev/hmf-build/hmf-maven</url>
        </snapshotRepository>
        <repository>
            <id>artifact-registry</id>
            <url>artifactregistry://europe-west4-maven.pkg.dev/hmf-build/hmf-maven</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>artifact-registry</id>
            <url>artifactregistry://europe-west4-maven.pkg.dev/hmf-build/hmf-maven</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <extensions>
            <extension>
                <groupId>com.google.cloud.artifactregistry</groupId>
                <artifactId>artifactregistry-maven-wagon</artifactId>
                <version>${google.artifactregistry.version}</version>
            </extension>
        </extensions>
        
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${maven.exec.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven.assembly.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jooq</groupId>
                    <artifactId>jooq-codegen-maven</artifactId>
                    <version>${jooq.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hartwig.serve</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.serve</groupId>
                <artifactId>datamodel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.serve</groupId>
                <artifactId>ckb-importer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hartwig.serve</groupId>
                <artifactId>vicc-importer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.samtools</groupId>
                <artifactId>htsjdk</artifactId>
                <version>${htsjdk.version}</version>
            </dependency>
            <dependency>
                <groupId>com.intellij</groupId>
                <artifactId>annotations</artifactId>
                <version>${intellij.annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${google.guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${google.gson.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${commons.cli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${apache.log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${apache.log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooq</groupId>
                <artifactId>jooq</artifactId>
                <version>${jooq.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysqlconnector.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.cloud.sql</groupId>
                <artifactId>mysql-socket-factory-connector-j-8</artifactId>
                <version>${mysql.socket.factory.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>${immutables.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>gson</artifactId>
                <version>${immutables.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>com.hartwig.serve</groupId>
                <artifactId>datamodel</artifactId>
                <version>local-SNAPSHOT</version>
                <scope>test</scope>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>release-datamodel</id>
            <modules>
                <module>common</module>
                <module>algo</module>
                <module>datamodel</module>
            </modules>
        </profile>
    </profiles>

</project>
